force-app/main/default/objects/Twitter_log__c/Twitter_log__c.object-meta.xml
<CustomObject>
    <label>Twitter Log</label>
    <nameField>
        <label>Twitter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>