force-app/main/default/objects/Twitter_log__c/fields/User_Friendly_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Friendly_Message__c</fullName>
    <label>User Friendly Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>